@@ -21,7 +21,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.reflect.Method;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
@@ -75,7 +75,7 @@ public class Metrics {
       // Inform the server owners about bStats
       config
           .options()
-          .header(
+          .setHeader(Arrays.asList(
               "bStats (https://bStats.org) collects some basic information for plugin authors, like"
                   + " how\n"
                   + "many people use their plugin and their total player count. It's recommended to"
@@ -84,7 +84,8 @@ public class Metrics {
                   + " off. There is no\n"
                   + "performance penalty associated with having metrics enabled, and data sent to"
                   + " bStats is fully\n"
-                  + "anonymous.")
+                  + "anonymous."
+          ))
           .copyDefaults(true);
       try {
         config.save(configFile);
@@ -136,7 +137,7 @@ public class Metrics {
   }
 
   private void appendServiceData(JsonObjectBuilder builder) {
-    builder.appendField("pluginVersion", plugin.getDescription().getVersion());
+    builder.appendField("pluginVersion", plugin.getPluginMeta().getVersion());
   }
 
   private int getPlayerAmount() {
@@ -314,7 +315,7 @@ public class Metrics {
         infoLogger.accept("Sent bStats metrics data: " + data.toString());
       }
       String url = String.format(REPORT_URL, platform);
-      HttpsURLConnection connection = (HttpsURLConnection) new URL(url).openConnection();
+      HttpsURLConnection connection = (HttpsURLConnection) URI.create(url).toURL().openConnection();
       // Compress the data to save bandwidth
       byte[] compressedData = compress(data.toString());
       connection.setRequestMethod("POST");
